[package]
name = "rust_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bytes = "1.10.1"
futures-util = "0.3.31"
mini-redis = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
